Adding skeletal menu and config props